--- a/MDCMS.Client/wwwroot/index.html
+++ b/MDCMS.Client/wwwroot/index.html
@@ -6,12 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MallDirectoryCMS</title>
     <base href="/" />
-    <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />
+    <!--<link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.min.css" />-->
     <link rel="stylesheet" href="css/app.css" />
+    <!--<link rel="stylesheet" href="css/login.css" />-->
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="MDCMS.Client.styles.css" rel="stylesheet" />
-    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+    <!--<link href="MDCMS.Client.styles.css" rel="stylesheet" />-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <!-- Important: Increment the version parameter whenever you update MudBlazor to prevent caching issues -->
+    <link href="_content/MudBlazor/MudBlazor.min.css?v=1" rel="stylesheet" />
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script>
+        function onRecaptchaSuccess(token) {
+            DotNet.invokeMethodAsync('MDCMS.Client', 'OnRecaptchaSuccess', token);
+        }
+    </script>
+
 </head>
 
 <body>
@@ -29,7 +38,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
-    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js?v=1"></script>
 </body>
 
 </html>
